--- a/Html_folder/about.html
+++ b/Html_folder/about.html
@@ -3,199 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <title>About Page</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-            background-image: url('spacebg.png');
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
-            font-family: "Times New Roman", serif;
-            color: white;
-            overflow-x: hidden;
-            overflow-y: auto;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-        }
-        .header {
-            position: relative;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 50px;
-            background-color: #000;
-            padding: 10px 20px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        }
-        .container-1 {
-            display: flex;
-            justify-content: space-between;
-            width: 100%;
-            max-width: 1200px;
-            margin: 0 auto;
-            align-items: center;
-        }
-        .nav-list {
-            list-style: none;
-            display: flex;
-            gap: 30px;
-            margin: 0;
-            padding: 0;
-        }
-        .nav-list a {
-            text-decoration: none;
-            color: #ffffff;
-            font-size: 20px;
-            font-weight: 700;
-            font-family: 'Exo 2', sans-serif !important;
-            text-transform: uppercase;
-            padding: 15px 10px;
-            letter-spacing: 2px;
-            position: relative;
-            transition: color 0.2s ease;
-        }
-        .nav-list a::after {
-            content: "";
-            position: absolute;
-            left: 0;
-            bottom: -2px;
-            width: 0;
-            height: 3px;
-            background-color: #ff4655;
-            transition: width 0.3s ease;
-            border-radius: 5px;
-        }
-        .nav-list a:hover::after, .nav-list a:active::after {
-            width: 100%;
-            background-color: #ff4655;
-        }
-        .nav-list a:hover, #nav-active:hover {
-            color: #ff4651;
-        }
-        .nav-list a:active, #nav-active:active {
-            color: #ffffff;
-        }
-        #nav-active {
-            text-decoration: none;
-            color: #e73737;
-            font-size: 20px;
-            font-weight: 700;
-            font-family: 'Exo 2', sans-serif !important;
-            text-transform: uppercase;
-            padding: 15px 10px;
-            letter-spacing: 2px;
-            position: relative;
-            transition: color 0.2s ease;
-        }
-        .actions {
-            display: flex;
-            right: 20px;
-            align-items: center;
-            gap: 10px;
-        }
-        h1 {
-            font-size: 4rem;
-            font-weight: bold;
-            margin-top: 120px;
-            margin-bottom: 30px;
-            text-align: center;
-        }
-        .section-container {
-            background-color: rgba(0, 0, 0, 0.6);
-            border-radius: 30px;
-            padding: 40px;
-            margin: 20px auto;
-            width: 80%;
-            max-width: 1000px;
-            box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
-        }
-        .instructions, .scoring {
-            margin-top: 40px;
-            text-align: center;
-        }
-        .instructions-list {
-            list-style: none;
-            padding: 0;
-            margin: 10px 0 30px 0;
-        }
-        .instructions-list li {
-            margin-bottom: 10px;
-            font-size: 1.2rem;
-        }
-        .creators-section {
-            margin: 100px auto;
-            width: 90%;
-            text-align: center;
-            padding: 40px;
-            background-color: rgba(255, 255, 255, 0.1);
-            border-radius: 30px;
-            box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
-        }
-        .creators-section h2 {
-            font-size: 3rem;
-            margin-bottom: 30px;
-            color: white;
-        }
-        .profiles-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 40px;
-        }
-        .profile-card {
-            background-color: rgba(0, 0, 0, 0.7);
-            border-radius: 20px;
-            padding: 30px;
-            width: 200px;
-            text-align: center;
-            box-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
-            transition: transform 0.3s ease;
-        }
-        .profile-card:hover {
-            transform: scale(1.08);
-        }
-        .profile-card img {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-            border-radius: 50%;
-            margin-bottom: 15px;
-        }
-        .profile-card p {
-            margin: 0;
-            font-size: 1.4rem;
-            color: white;
-        }
-        .footer {
-            color: white;
-            text-align: center;
-            padding: 20px 10px;
-            margin-top: auto;
-        }
-
-        .p-footer {
-            font-size: 1.5rem;
-            margin-bottom: 10px;
-        }
-
-        .footer a {
-            color: white;
-            text-decoration: none;
-            font-size: 1.5rem;
-            margin: 0 10px;
-        }
-
-        .footer a:hover {
-            text-decoration: underline;
-            color: #e9ebfd;
-        }
-    </style>
 </head>
 <body>
     <header class="header">
@@ -270,7 +77,9 @@
                 <p>Sophia Chilo H. Vargas</p>
             </div>
         </div>
-     <!-- Footer -->
+    </section>
+
+    <!-- Footer -->
     <footer class="footer">
         <br><br><br><br>
         <p class="p-desc">
